--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 
-test index
-<a href=main.html>main test</a>
+ <!DOCTYPE html>
+<html>
+<body>
+
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+
+</body>
+</html> 
 
