--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <body>
 
  
+<p>Link to the beta realease of the lecture notes of the course Mechatronic Systems and Laboratory</p>
+ <p>We make use of the hypothesis system to receive feedback and comments about the notes. Just highlight a portion of text and write a comment</p>
 <a href="lecturenotes.html">Lecture Notes</a>
 
  
