--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-<body>
+    <head>
+        <meta charset=utf-8>
+        <title>Mechatronics Systems and Laboratory</title>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+        <h1>Beta release of the lecture notes of the course Mechatronic Systems and Laboratory</h1>
 
- 
-<p>Link to the beta realease of the lecture notes of the course Mechatronic Systems and Laboratory</p>
- <p>We make use of the hypothesis system to receive feedback and comments about the notes. Just highlight a portion of text and write a comment</p>
-<a href="lecturenotes.html">Lecture Notes</a>
+        <p>We make use of <a href="https://web.hypothes.is/">hypothes.is</a> to receive feedback and comments about the notes. Just highlight a portion of text and write a comment as needed.</p>
 
- 
- 
-</body>
-</html> 
-
+        <a href="lecturenotes.html">Lecture Notes</a>
+    </body>
+</html>
