--- a/lecture-notes.html
+++ b/lecture-notes.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <title>Home | Mechatronic Systems and Laboratory</title>
+    <title>Notes | Mechatronic Systems and Laboratory</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
