Started splitting into sections

--- a/example-page.html
+++ b/example-page.html
@@ -3,7 +3,7 @@
     <title>Notes | Mechatronic Systems and Laboratory</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
@@ -30,10 +30,12 @@
                 <div class="w3-dropdown-hover">
                 <button  class="w3-button">Notes</button>
                 <div id="notes-bar-item" class="w3-dropdown-content w3-bar-block w3-card-4">
-                    <a href="/notes/fundamentals.html" class="w3-bar-item w3-button">Fundamentals</a>
-                    <a href="/notes/control.html" class="w3-bar-item w3-button">Optimal Control</a>
-                    <a href="/notes/estimation.html" class="w3-bar-item w3-button">Estimation</a>
-                    <a href="/notes/smart-materials.html" class="w3-bar-item w3-button">Smart Materials</a>
+                    <a href="./notes/introduction.html" class="w3-bar-item w3-button">Introduction</a>
+                    <a href="./notes/nonlinear-programming.html" class="w3-bar-item w3-button">Nonlinear Programming</a>
+                    <a href="./notes/calculus-of-variations.html" class="w3-bar-item w3-button">Calculus Of Variations</a>
+                    <a href="./notes/optimal-control.html" class="w3-bar-item w3-button">Optimal Control</a>
+                    <a href="./notes/estimation.html" class="w3-bar-item w3-button">Estimation</a>
+                    <a href="./notes/smart-materials.html" class="w3-bar-item w3-button">Smart Materials</a>
                 </div>
                 </div>
         </div>
