--- a/notes.html
+++ b/notes.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <title>Lab | Mechatronic Systems and Laboratory</title>
+    <title>Notes | Mechatronic Systems and Laboratory</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style-w3.css">
@@ -47,8 +47,12 @@
 
             <div class="w3-row w3-padding-64">
                 <div class="w3-container">
-                    <h1 class="w3-text-teal">Laboratory</h1>
-                    <p>Work in progress.</p>
+                    <h1 class="w3-text-teal">Notes</h1>
+                    <p>We make use of <a href="https://web.hypothes.is/">hypothes.is</a> to receive feedback and comments about the notes. Just highlight a portion of text and write a comment as needed.</p>
+                    <h3><a href="./notes/fundamentals.html">Fundamentals</a></h3>
+                    <h3><a href="./notes/control.html">Optimal control</a></h3>
+                    <h3><a href="./notes/estimation.html">Estimation</a></h3>
+                    <h3><a href="./notes/smart-materials.html">Smart materials</a></h3>
                 </div>
             </div>
 
