--- a/index.html
+++ b/index.html
@@ -3,133 +3,64 @@
     <title>Home | Mechatronic Systems and Laboratory</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
-        .w3-sidebar {
-            z-index: 3;
-            width: 250px;
-            top: 43px;
-            bottom: 0;
-            height: inherit;
-        }
         .w3-bar {overflow: visible;}
+        #myFooter {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+        }
     </style>
-    <body>
-        
-    <!-- Navbar -->
-    <div class="w3-top">
-        <div class="w3-bar w3-theme w3-top w3-left-align w3-large">
-                <a class="w3-bar-item w3-button w3-right w3-hide-large w3-hover-white w3-large w3-theme-l1" href="javascript:void(0)" onclick="w3_open()"><i class="fa fa-bars"></i></a>
-                <a href="/" class="w3-bar-item w3-button w3-theme-l1">Home</a>
-                <a href="/laboratory.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Laboratory</a>
-                <a href="/computer-lab.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Computer Lab</a>
-                <a href="/theses.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Theses</a>
-                <div class="w3-dropdown-hover">
-                <button  class="w3-button">Notes</button>
-                <div id="notes-bar-item" class="w3-dropdown-content w3-bar-block w3-card-4">
-                    <a href="/notes/fundamentals.html" class="w3-bar-item w3-button">Fundamentals</a>
-                    <a href="/notes/control.html" class="w3-bar-item w3-button">Optimal Control</a>
-                    <a href="/notes/estimation.html" class="w3-bar-item w3-button">Estimation</a>
-                    <a href="/notes/smart-materials.html" class="w3-bar-item w3-button">Smart Materials</a>
-                </div>
-                </div>
-        </div>
-    </div>
-
-    <!-- Sidebar -->
-    <nav class="w3-sidebar w3-bar-block w3-collapse w3-large w3-theme-l5 w3-animate-left" id="mySidebar">
-        <a href="javascript:void(0)" onclick="w3_close()" class="w3-right w3-xlarge w3-padding-large w3-hover-black w3-hide-large" title="Close Menu">
-                <i class="fa fa-remove"></i>
-        </a>
-        <h4 class="w3-bar-item"><b>Menu</b></h4>
-        <a class="w3-bar-item w3-button w3-hover-black" href="#">Link</a>
-        <a class="w3-bar-item w3-button w3-hover-black" href="#">Link</a>
-        <a class="w3-bar-item w3-button w3-hover-black" href="#">Link</a>
-        <a class="w3-bar-item w3-button w3-hover-black" href="#">Link</a>
-    </nav>
-
-    <!-- Overlay effect when opening sidebar on small screens -->
-    <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
-
-    <!-- Main content: shift it to the right by 250 pixels when the sidebar is visible -->
-    <div class="w3-main" style="margin-left:250px">
-
-        <div class="w3-row w3-padding-64">
-                <div class="w3-twothird w3-container">
-                    <h1 class="w3-text-teal">Heading</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum
-                            dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                </div>
-                <div class="w3-third w3-container">
-                    <p class="w3-border w3-padding-large w3-padding-32 w3-center">AD</p>
-                    <p class="w3-border w3-padding-large w3-padding-64 w3-center">AD</p>
-                </div>
+    <body>  
+        <!-- Navbar -->
+        <div class="w3-top">
+            <div class="w3-bar w3-theme w3-top w3-left-align w3-large">
+                    <a class="w3-bar-item w3-button w3-right w3-hide-large w3-hover-white w3-large w3-theme-l1" href="javascript:void(0)" onclick="w3_open()"><i class="fa fa-bars"></i></a>
+                    <a href="./" class="w3-bar-item w3-button w3-theme-l1">Home</a>
+                    <a href="./laboratory.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Laboratory</a>
+                    <a href="./computer-lab.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Computer Lab</a>
+                    <a href="./theses.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Theses</a>
+                    <div class="w3-dropdown-hover">
+                    <a href="./notes.html" class="w3-button w3-hide-small w3-hover-white">Notes</a>
+                    <div id="notes-bar-item" class="w3-dropdown-content w3-bar-block w3-card-4">
+                        <a href="./notes/introduction.html" class="w3-bar-item w3-button">Introduction</a>
+                        <a href="./notes/nonlinear-programming.html" class="w3-bar-item w3-button">Nonlinear Programming</a>
+                        <a href="./notes/calculus-of-variations.html" class="w3-bar-item w3-button">Calculus Of Variations</a>
+                        <a href="./notes/optimal-control.html" class="w3-bar-item w3-button">Optimal Control</a>
+                        <a href="./notes/estimation.html" class="w3-bar-item w3-button">Estimation</a>
+                        <a href="./notes/smart-materials.html" class="w3-bar-item w3-button">Smart Materials</a>
+                    </div>
+                    </div>
+            </div>
         </div>
 
-        <div class="w3-row">
-                <div class="w3-twothird w3-container">
-                    <h1 class="w3-text-teal">Heading</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum
-                            dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <!-- Overlay effect when opening sidebar on small screens -->
+        <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
+
+        <!-- Main content: shift it to the right by 250 pixels when the sidebar is visible -->
+        <div class="w3-main">
+
+            <div class="w3-row w3-padding-64">
+                <div class="w3-container">
+                    <h1 class="w3-text-teal">Mechatronic Systems and Laboratory</h1>
+                    <p>Welcome to the Mechatronic Systems and Laboratory beta website.</p>
+                    <p>This course is part of the Mechanical Engineering program at Politecnico di Milano.</p>
+                    <p>You can find the lecture notes for the course at <a href="./notes.html">this link</a>.</p>
                 </div>
-                <div class="w3-third w3-container">
-                    <p class="w3-border w3-padding-large w3-padding-32 w3-center">AD</p>
-                    <p class="w3-border w3-padding-large w3-padding-64 w3-center">AD</p>
-                </div>
+            </div>
+
+            <footer id="myFooter">
+                    <div class="w3-container w3-theme-l1">
+                        <p>&copy; Copyright 2020 <a href="https://polimechatronics.github.io/" target="_blank">Mechatronic Systems and Laboratory</a> course at <a href="https://polimi.it/" target="_blank">Politecnico di Milano</a></p>
+                    </div>
+            </footer>
+
+        <!-- END MAIN -->
         </div>
-
-        <div class="w3-row w3-padding-64">
-                <div class="w3-twothird w3-container">
-                    <h1 class="w3-text-teal">Heading</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum
-                            dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                </div>
-                <div class="w3-third w3-container">
-                    <p class="w3-border w3-padding-large w3-padding-32 w3-center">AD</p>
-                    <p class="w3-border w3-padding-large w3-padding-64 w3-center">AD</p>
-                </div>
-        </div>
-
-        <footer id="myFooter">
-                <div class="w3-container w3-theme-l2 w3-padding-32">
-                    <h4>Footer</h4>
-                </div>
-
-                <div class="w3-container w3-theme-l1">
-                    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
-                </div>
-        </footer>
-
-    <!-- END MAIN -->
-    </div>
-
-    <script>
-        // Get the Sidebar
-        var mySidebar = document.getElementById("mySidebar");
-
-        // Get the DIV with overlay effect
-        var overlayBg = document.getElementById("myOverlay");
-
-        // Toggle between showing and hiding the sidebar, and add overlay effect
-        function w3_open() {
-                if (mySidebar.style.display === 'block') {
-                    mySidebar.style.display = 'none';
-                    overlayBg.style.display = "none";
-                } else {
-                    mySidebar.style.display = 'block';
-                    overlayBg.style.display = "block";
-                }
-        }
-
-        // Close the sidebar with the close button
-        function w3_close() {
-                mySidebar.style.display = "none";
-                overlayBg.style.display = "none";
-        }
-    </script>
-
     </body>
 </html>
