--- a/notes/introduction.html
+++ b/notes/introduction.html
@@ -58,10 +58,11 @@
             <a href="javascript:void(0)" onclick="w3_close()" class="w3-right w3-xlarge w3-padding-large w3-hover-black w3-hide-large" title="Close Menu">
                 <i class="fa fa-remove"></i>
             </a>
-            <h4 class="w3-bar-item"><b>Menu</b></h4>
-            <a class="w3-bar-item w3-button w3-hover-black" href="#">Introduction</a>
-            <a class="w3-bar-item w3-button w3-hover-black" href="#">Static optimization</a>
-            <a class="w3-bar-item w3-button w3-hover-black" href="#">Calculus of variations</a>
+            <h4 class="w3-bar-item"><b>Table of contents</b></h4>
+            <a class="w3-bar-item w3-button w3-hover-black" href="#introduction">Introduction</a>
+            <a class="w3-bar-item w3-button w3-hover-black" href="#notes-layout">Notes layout</a>
+            <a class="w3-bar-item w3-button w3-hover-black" href="#pre-requisites">Pre-requisites</a>
+            <a class="w3-bar-item w3-button w3-hover-black" href="#final-remarks">Final remarks</a>
         </nav>
 
         <!-- Overlay effect when opening sidebar on small screens -->
@@ -71,6 +72,7 @@
         <div class="w3-main" style="margin-left: 250px;">
             <div class="w3-row w3-padding-64">
                 <div class="w3-twothird w3-container">
+                    <a class="anchor-text" id="introduction"></a>
                     <h1 class="w3-text-teal"><span class="titlemark">1 </span>Introduction</h1>
                     <p>
                         Over the past sixty years, a great body of knowledge has been built up on the subject of feedback control systems for linear, time-invariant, single input and single output dynamic systems. This knowledge plays an important
@@ -114,6 +116,7 @@
 
             <div class="w3-row">
                 <div class="w3-twothird w3-container">
+                    <a class="anchor-text" id="notes-layout"></a>
                     <h2 class="w3-text-teal"><span class="titlemark">1.1 </span> <a id="x1-30001.1"></a>Lecture notes layout</h2>
                     <p>The course aims at providing the students with all necessary tools for being able to apply the theory to practical optimal control design problems.</p>
                     <p>
@@ -142,6 +145,7 @@
 
             <div class="w3-row">
                 <div class="w3-twothird w3-container">
+                    <a class="anchor-text" id="pre-requisites"></a>
                     <h2 class="w3-text-teal"><span class="titlemark">1.2 </span> <a id="x1-40001.2"></a>Pre-requisites for the course</h2>
                     <p>The background assumed of any student is:</p>
 
@@ -154,8 +158,9 @@
                 </div>
             </div>
 
-            <div class="w3-row w3-padding-64">
+            <div class="w3-row">
                 <div class="w3-twothird w3-container">
+                    <a class="anchor-text" id="final-remarks"></a>
                     <h2 class="w3-text-teal"><span class="titlemark">1.3 </span> <a id="x1-50001.3"></a>Final Remarks</h2>
                     <p>
                         There are tons of books (not to talk about papers) dealing with calculus of variations and optimal control design. Although some of them are excellent, navigating and combining the material for obtaining an appropriate
