Fixed footer copyright

--- a/example-page.html
+++ b/example-page.html
@@ -101,7 +101,7 @@
                 </div>
 
                 <div class="w3-container w3-theme-l1">
-                    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+                    <p>&copy; Copyright 2020 <a href="https://polimechatronics.github.io/" target="_blank">Mechatronic Systems and Laboratory</a> course at <a href="https://polimi.it/" target="_blank">Politecnico di Milano</a></p>
                 </div>
         </footer>
 
