--- a/notes/introduction.html
+++ b/notes/introduction.html
@@ -70,9 +70,11 @@
 
         <!-- Main content: shift it to the right by 250 pixels when the sidebar is visible -->
         <div class="w3-main" style="margin-left: 250px;">
+
+            <!-- 1 Introduction -->
             <div class="w3-row w3-padding-64">
+                <a class="anchor-text" id="introduction"></a>
                 <div class="w3-twothird w3-container">
-                    <a class="anchor-text" id="introduction"></a>
                     <h1 class="w3-text-teal"><span class="titlemark">1 </span>Introduction</h1>
                     <p>
                         Over the past sixty years, a great body of knowledge has been built up on the subject of feedback control systems for linear, time-invariant, single input and single output dynamic systems. This knowledge plays an important
@@ -114,9 +116,10 @@
                 </div>
             </div>
 
+            <!-- 1.1 Lecture notes layout -->
             <div class="w3-row">
+                <a class="anchor-text" id="notes-layout"></a>
                 <div class="w3-twothird w3-container">
-                    <a class="anchor-text" id="notes-layout"></a>
                     <h2 class="w3-text-teal"><span class="titlemark">1.1 </span> <a id="x1-30001.1"></a>Lecture notes layout</h2>
                     <p>The course aims at providing the students with all necessary tools for being able to apply the theory to practical optimal control design problems.</p>
                     <p>
@@ -143,9 +146,10 @@
                 </div>
             </div>
 
+            <!-- 1.2 Pre-requisites for the course -->
             <div class="w3-row">
+                <a class="anchor-text" id="pre-requisites"></a>
                 <div class="w3-twothird w3-container">
-                    <a class="anchor-text" id="pre-requisites"></a>
                     <h2 class="w3-text-teal"><span class="titlemark">1.2 </span> <a id="x1-40001.2"></a>Pre-requisites for the course</h2>
                     <p>The background assumed of any student is:</p>
 
@@ -158,9 +162,10 @@
                 </div>
             </div>
 
+            <!-- 1.3 Final remarks -->
             <div class="w3-row">
+                <a class="anchor-text" id="final-remarks"></a>
                 <div class="w3-twothird w3-container">
-                    <a class="anchor-text" id="final-remarks"></a>
                     <h2 class="w3-text-teal"><span class="titlemark">1.3 </span> <a id="x1-50001.3"></a>Final Remarks</h2>
                     <p>
                         There are tons of books (not to talk about papers) dealing with calculus of variations and optimal control design. Although some of them are excellent, navigating and combining the material for obtaining an appropriate
