--- a/notes/introduction.html
+++ b/notes/introduction.html
@@ -59,10 +59,10 @@
                 <i class="fa fa-remove"></i>
             </a>
             <h4 class="w3-bar-item"><b>Table of contents</b></h4>
-            <a class="w3-bar-item w3-button w3-hover-black" href="#introduction">Introduction</a>
-            <a class="w3-bar-item w3-button w3-hover-black" href="#notes-layout">Notes layout</a>
-            <a class="w3-bar-item w3-button w3-hover-black" href="#pre-requisites">Pre-requisites</a>
-            <a class="w3-bar-item w3-button w3-hover-black" href="#final-remarks">Final remarks</a>
+            <a class="w3-bar-item w3-button w3-hover-black" href="#introduction">1. Introduction</a>
+            <a class="w3-bar-item w3-button w3-hover-black" href="#notes-layout">1.1 Notes layout</a>
+            <a class="w3-bar-item w3-button w3-hover-black" href="#pre-requisites">1.2 Pre-requisites</a>
+            <a class="w3-bar-item w3-button w3-hover-black" href="#final-remarks">1.3 Final remarks</a>
         </nav>
 
         <!-- Overlay effect when opening sidebar on small screens -->
