--- a/notes-template.html
+++ b/notes-template.html
@@ -58,10 +58,8 @@
             <a href="javascript:void(0)" onclick="w3_close()" class="w3-right w3-xlarge w3-padding-large w3-hover-black w3-hide-large" title="Close Menu">
                 <i class="fa fa-remove"></i>
             </a>
-            <h4 class="w3-bar-item"><b>Menu</b></h4>
-            <a class="w3-bar-item w3-button w3-hover-black" href="#">Introduction</a>
-            <a class="w3-bar-item w3-button w3-hover-black" href="#">Static optimization</a>
-            <a class="w3-bar-item w3-button w3-hover-black" href="#">Calculus of variations</a>
+            <h4 class="w3-bar-item"><b>Table of contents</b></h4>
+            <a class="w3-bar-item w3-button w3-hover-black" href="#">Section 1</a>
         </nav>
 
         <!-- Overlay effect when opening sidebar on small screens -->
@@ -69,6 +67,8 @@
 
         <!-- Main content: shift it to the right by 250 pixels when the sidebar is visible -->
         <div class="w3-main" style="margin-left: 250px;">
+
+            <!-- 1 Introduction -->
             <div class="w3-row w3-padding-64">
                 <div class="w3-twothird w3-container">
                     <h1 class="w3-text-teal">Introduction</h1>
@@ -77,15 +77,17 @@
             </div>
 
             <div class="w3-row">
+                <a class="anchor-text" id="TODO"></a>
                 <div class="w3-twothird w3-container">
-                    <h2 class="w3-text-teal"><span class="titlemark">1.1 </span> <a id="x1-30001.1"></a>Lecture notes layout</h2>
+                    <h2 class="w3-text-teal"><span class="titlemark">1.1 </span> <a id="x1-30001.1"></a>Title</h2>
                     
                 </div>
             </div>
 
-            <div class="w3-row w3-padding-64">
+            <div class="w3-row">
+                <a class="anchor-text" id="TODO"></a>
                 <div class="w3-twothird w3-container">
-                    <h2 class="w3-text-teal"><span class="titlemark">1.3 </span> <a id="x1-50001.3"></a>Final Remarks</h2>
+                    <h2 class="w3-text-teal"><span class="titlemark">1.1 </span> <a id="x1-30001.1"></a>Title</h2>
                     
                 </div>
             </div>
