--- a/notes.html
+++ b/notes.html
@@ -9,7 +9,7 @@
     <style>
         html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
         .w3-bar {overflow: visible;}
-        #myFooter {
+        #fixedBottomFooter {
             position: fixed;
             left: 0;
             bottom: 0;
@@ -48,15 +48,18 @@
             <div class="w3-row w3-padding-64">
                 <div class="w3-container">
                     <h1 class="w3-text-teal">Notes</h1>
-                    <p>We make use of <a href="https://web.hypothes.is/">hypothes.is</a> to receive feedback and comments about the notes. Just highlight a portion of text and write a comment as needed.</p>
-                    <h3><a href="./notes/fundamentals.html">Fundamentals</a></h3>
-                    <h3><a href="./notes/control.html">Optimal control</a></h3>
-                    <h3><a href="./notes/estimation.html">Estimation</a></h3>
-                    <h3><a href="./notes/smart-materials.html">Smart materials</a></h3>
+                    <p>We make use of <a href="https://web.hypothes.is/">hypothes.is</a> to receive feedback and comments about the notes.
+                        Just highlight any portion of text in the following sections and write a comment as needed.</p>
+                    <h4><a href="./notes/fundamentals.html">Introduction</a></h4>
+                    <h4><a href="./notes/control.html">Nonlinear programming</a></h4>
+                    <h4><a href="./notes/calculus-of-variations.html">Calculus of variations</a></h4>
+                    <h4><a href="./notes/optimal-control.html">Optimal control</a></h4>
+                    <h4><a href="./notes/estimation.html">Estimation</a></h4>
+                    <h4><a href="./notes/smart-materials.html">Smart materials</a></h4>
                 </div>
             </div>
 
-            <footer id="myFooter">
+            <footer id="fixedBottomFooter">
                     <div class="w3-container w3-theme-l1">
                         <p>&copy; Copyright 2020 <a href="https://polimechatronics.github.io/" target="_blank">Mechatronic Systems and Laboratory</a> course at <a href="https://polimi.it/" target="_blank">Politecnico di Milano</a></p>
                     </div>
