--- a/notes/optimal-control.html
+++ b/notes/optimal-control.html
@@ -27,6 +27,12 @@
                 height: inherit;
             }
             .w3-bar {overflow: visible;}
+            #fixedBottomFooter {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+        }
         </style>
     </head>
 
@@ -72,13 +78,11 @@
             <div class="w3-row w3-padding-64">
                 <div class="w3-twothird w3-container">
                     <h1 class="w3-text-teal">Optimal control</h1>
-                    
+                    <p>Work in progress</p>
                 </div>
             </div>
 
-            <p>Work in progress</p>
-
-            <footer id="myFooter">
+            <footer id="fixedBottomFooter">
                 <div class="w3-container w3-theme-l1">
                     <p>&copy; Copyright 2020 <a href="https://polimechatronics.github.io/" target="_blank">Mechatronic Systems and Laboratory</a> course at <a href="https://polimi.it/" target="_blank">Politecnico di Milano</a></p>
                 </div>
