--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
         .w3-bar {overflow: visible;}
-        #myFooter {
+        #fixedBottomFooter {
             position: fixed;
             left: 0;
             bottom: 0;
@@ -54,7 +54,7 @@
                 </div>
             </div>
 
-            <footer id="myFooter">
+            <footer id="fixedBottomFooter">
                     <div class="w3-container w3-theme-l1">
                         <p>&copy; Copyright 2020 <a href="https://polimechatronics.github.io/" target="_blank">Mechatronic Systems and Laboratory</a> course at <a href="https://polimi.it/" target="_blank">Politecnico di Milano</a></p>
                     </div>
