--- a/theses.html
+++ b/theses.html
@@ -54,7 +54,7 @@
 
             <footer id="myFooter">
                     <div class="w3-container w3-theme-l2 w3-padding-32">
-                        <h4>For a complete list of all the available theses, please contact Prof. Braghin.</h4>
+                        <h4>For a complete list of all the available thesis topics, please contact Prof. Braghin.</h4>
                     </div>
                     <div class="w3-container w3-theme-l1">
                         <p>&copy; Copyright 2020 <a href="https://polimechatronics.github.io/" target="_blank">Mechatronic Systems and Laboratory</a> course at <a href="https://polimi.it/" target="_blank">Politecnico di Milano</a></p>
