--- a/notes/smart-materials.html
+++ b/notes/smart-materials.html
@@ -65,7 +65,7 @@
                 <i class="fa fa-remove"></i>
             </a>
             <h4 class="w3-bar-item"><b>Table of contents</b></h4>
-            <a class="w3-bar-item w3-button w3-hover-black" href="#">Smart materials</a>
+            <a class="w3-bar-item w3-button w3-hover-black" href="#">6 Smart materials</a>
         </nav>
 
         <!-- Overlay effect when opening sidebar on small screens -->
@@ -77,7 +77,7 @@
             <!-- 1 Introduction -->
             <div class="w3-row w3-padding-64">
                 <div class="w3-twothird w3-container">
-                    <h1 class="w3-text-teal">Smart materials</h1>
+                    <h1 class="w3-text-teal">6 Smart materials</h1>
                     <p>Work in progress</p>
                 </div>
             </div>
