--- a/notes/optimal-control.html
+++ b/notes/optimal-control.html
@@ -46,7 +46,7 @@
                 <a href="../computer-lab.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Computer Lab</a>
                 <a href="../theses.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Theses</a>
                 <div class="w3-dropdown-hover">
-                    <button class="w3-button">Notes</button>
+                    <a href="../notes.html" class="w3-button w3-hide-small w3-hover-white">Notes</a>
                     <div id="notes-bar-item" class="w3-dropdown-content w3-bar-block w3-card-4">
                         <a href="./introduction.html" class="w3-bar-item w3-button">Introduction</a>
                         <a href="./nonlinear-programming.html" class="w3-bar-item w3-button">Nonlinear Programming</a>
