Done with introduction and minor edits

--- a/notes-template.html
+++ b/notes-template.html
@@ -92,11 +92,11 @@
                 </div>
             </div>
 
-            <footer id="myFooter">
+            <footer class="fixed-bottom-footer">
                 <div class="w3-container w3-theme-l1">
                     <p>&copy; Copyright 2020 <a href="https://polimechatronics.github.io/" target="_blank">Mechatronic Systems and Laboratory</a> course at <a href="https://polimi.it/" target="_blank">Politecnico di Milano</a></p>
                 </div>
-            </footer>
+        </footer>
 
             <!-- END MAIN -->
         </div>
