--- a/theses.html
+++ b/theses.html
@@ -9,12 +9,6 @@
     <style>
         html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
         .w3-bar {overflow: visible;}
-        #myFooter {
-            position: fixed;
-            left: 0;
-            bottom: 0;
-            width: 100%;
-        }
     </style>
     <body>  
         <!-- Navbar -->
@@ -52,7 +46,7 @@
                 </div>
             </div>
 
-            <footer id="myFooter">
+            <footer class="fixed-bottom-footer">
                     <div class="w3-container w3-theme-l2 w3-padding-32">
                         <h4>For a complete list of all the available thesis topics, please contact Prof. Braghin.</h4>
                     </div>
