--- a/notes.html
+++ b/notes.html
@@ -9,12 +9,6 @@
     <style>
         html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
         .w3-bar {overflow: visible;}
-        #fixedBottomFooter {
-            position: fixed;
-            left: 0;
-            bottom: 0;
-            width: 100%;
-        }
     </style>
     <body>  
         <!-- Navbar -->
@@ -59,7 +53,7 @@
                 </div>
             </div>
 
-            <footer id="fixedBottomFooter">
+            <footer class="fixed-bottom-footer">
                     <div class="w3-container w3-theme-l1">
                         <p>&copy; Copyright 2020 <a href="https://polimechatronics.github.io/" target="_blank">Mechatronic Systems and Laboratory</a> course at <a href="https://polimi.it/" target="_blank">Politecnico di Milano</a></p>
                     </div>
