--- a/notes/introduction.html
+++ b/notes/introduction.html
@@ -20,7 +20,7 @@
         <style>
             html, body, h1, h2, h3, h4, h5, h6 {font-family: "Roboto", sans-serif;}
             .w3-sidebar {
-            z-index: 3;
+                z-index: 3;
                 width: 250px;
                 top: 43px;
                 bottom: 0;
@@ -58,11 +58,10 @@
             <a href="javascript:void(0)" onclick="w3_close()" class="w3-right w3-xlarge w3-padding-large w3-hover-black w3-hide-large" title="Close Menu">
                 <i class="fa fa-remove"></i>
             </a>
-            <h4 class="w3-bar-item"><b>Table of contents</b></h4>
-            <a class="w3-bar-item w3-button w3-hover-black" href="#introduction">1. Introduction</a>
-            <a class="w3-bar-item w3-button w3-hover-black" href="#notes-layout">1.1 Notes layout</a>
-            <a class="w3-bar-item w3-button w3-hover-black" href="#pre-requisites">1.2 Pre-requisites</a>
-            <a class="w3-bar-item w3-button w3-hover-black" href="#final-remarks">1.3 Final remarks</a>
+            <h4 class="w3-bar-item"><b><a class="chapter-link" href="#introduction">1 Introduction</a></b></h4>
+            <a class="w3-bar-item w3-button w3-hover-black" href="./introduction/notes-layout.html">1.1 Notes layout</a>
+            <a class="w3-bar-item w3-button w3-hover-black" href="./introduction/pre-requisites.html">1.2 Pre-requisites</a>
+            <a class="w3-bar-item w3-button w3-hover-black" href="./introduction/final-remarks.html">1.3 Final remarks</a>
         </nav>
 
         <!-- Overlay effect when opening sidebar on small screens -->
@@ -116,76 +115,7 @@
                 </div>
             </div>
 
-            <!-- 1.1 Lecture notes layout -->
-            <div class="w3-row">
-                <a class="anchor-text" id="notes-layout"></a>
-                <div class="w3-twothird w3-container">
-                    <h2 class="w3-text-teal"><span class="titlemark">1.1 </span> <a id="x1-30001.1"></a>Lecture notes layout</h2>
-                    <p>The course aims at providing the students with all necessary tools for being able to apply the theory to practical optimal control design problems.</p>
-                    <p>
-                        Optimal control design is based on the designer’s familiarity with the engineering situation and understanding of the underlying physics. These allow to formulate a relevant mathematical model based on which the optimal control is
-                        designed.
-                    </p>
-                    <p>There are four essential steps in an optimal control design:</p>
-
-                    <ul class="itemize1">
-                        <li class="itemize"><span class="cmti-10">full-state feedback design </span>where it is assumed that all states are measured and available for feedback;</li>
-                        <li class="itemize"><span class="cmti-10">state estimator design </span>where the concern is to estimate values of the states when they cannot all be measured directly, but certain measurements are available;</li>
-                        <li class="itemize">
-                            <span class="cmti-10">controller reduction </span>where the concern is to approximate a complicated state estimate feedback controller obtained from the above two steps by a simpler one - complication usually being measured by the
-                            state dimension;
-                        </li>
-                        <li class="itemize"><span class="cmti-10">implementation of the controller </span>where the controller has to be approximated in discrete-time to be implemented on physical hardware.</li>
-                    </ul>
-                    <p>
-                        The first part of the course assumes precise knowledge of the structure and parameters of the dynamic systems investigated and precise measurements of the states for feedback control. In practice, such precise knowledge is seldom
-                        available. Thus, it is important to be able to deal with random fluctuations in the environment and in the measurement system. The second part of the course thus is concerned with this topic, starting with a review of the fundamentals
-                        of probability and random processes and proceeding to the design of the ”best” control system, on the average, using noisy measurements and taking into account random perturbations of the system by the environment.
-                    </p>
-
-                </div>
-            </div>
-
-            <!-- 1.2 Pre-requisites for the course -->
-            <div class="w3-row">
-                <a class="anchor-text" id="pre-requisites"></a>
-                <div class="w3-twothird w3-container">
-                    <h2 class="w3-text-teal"><span class="titlemark">1.2 </span> <a id="x1-40001.2"></a>Pre-requisites for the course</h2>
-                    <p>The background assumed of any student is:</p>
-
-                    <ul class="itemize1">
-                        <li class="itemize">an elementary introduction to linear algebra.</li>
-                        <li class="itemize">an elementary knowledge of mechanics and ordinary differential equations;</li>
-                        <li class="itemize">an elementary control course, covering such notions as transfer functions, Nyquist plots, root locus, etc.;</li>
-                        <li class="itemize">an elementary introduction to the state-space description of linear systems and</li>
-                    </ul>
-                </div>
-            </div>
-
-            <!-- 1.3 Final remarks -->
-            <div class="w3-row">
-                <a class="anchor-text" id="final-remarks"></a>
-                <div class="w3-twothird w3-container">
-                    <h2 class="w3-text-teal"><span class="titlemark">1.3 </span> <a id="x1-50001.3"></a>Final Remarks</h2>
-                    <p>
-                        There are tons of books (not to talk about papers) dealing with calculus of variations and optimal control design. Although some of them are excellent, navigating and combining the material for obtaining an appropriate
-                        presentation level was definitely not trivial. I hope I did a good job but any suggestion is welcomed.
-                    </p>
-                    <p>
-                        The aim was to write lecture notes that were sufficiently self-contained so that any motivated student specializing in a technical subject should be able to follow them. Depending on the student’s background, some
-                        supplementary reading may be necessary from time to time. The references at the end of each chapter should facilitate this.
-                    </p>
-                    <p>The exercises form an integral part of the text. They either illustrate the subject matter covered or extend it.</p>
-                    <p>Problems at the end of each section are extensions and completions of theoretical material. The suggestion is to start working on each problem as soon as the corresponding material is covered.</p>
-                    <p>Take care that, although great effort has been done in trying to remove errors in the text, some may still be present. Please report these errors.</p>
-                    <p>
-                        Not always are proper references given to sources from which results are taken. This does not mean that the results are original. In fact, all results presented in these notes (with the exception of some simple examples)
-                        were borrowed from the literature.
-                    </p>
-                </div>
-            </div>
-
-            <footer id="myFooter">
+            <footer class="fixed-bottom-footer">
                 <div class="w3-container w3-theme-l1">
                     <p>&copy; Copyright 2020 <a href="https://polimechatronics.github.io/" target="_blank">Mechatronic Systems and Laboratory</a> course at <a href="https://polimi.it/" target="_blank">Politecnico di Milano</a></p>
                 </div>
