Renamed nonlinear programming to optimization

--- a/notes/nonlinear-programming.html
+++ b/notes/nonlinear-programming.html
@@ -36,7 +36,7 @@
                     <a href="../notes.html" class="w3-button w3-hide-small w3-hover-white">Notes</a>
                     <div id="notes-bar-item" class="w3-dropdown-content w3-bar-block w3-card-4">
                         <a href="./introduction.html" class="w3-bar-item w3-button">Introduction</a>
-                        <a href="./nonlinear-programming.html" class="w3-bar-item w3-button">Nonlinear Programming</a>
+                        <a href="./nonlinear-programming.html" class="w3-bar-item w3-button">Optimization</a>
                         <a href="./calculus-of-variations.html" class="w3-bar-item w3-button">Calculus Of Variations</a>
                         <a href="./optimal-control.html" class="w3-bar-item w3-button">Optimal Control</a>
                         <a href="./estimation.html" class="w3-bar-item w3-button">Estimation</a>
