--- a/notes.html
+++ b/notes.html
@@ -23,7 +23,7 @@
                     <a href="./notes.html" class="w3-button w3-hide-small w3-hover-white">Notes</a>
                     <div id="notes-bar-item" class="w3-dropdown-content w3-bar-block w3-card-4">
                         <a href="./notes/introduction.html" class="w3-bar-item w3-button">Introduction</a>
-                        <a href="./notes/nonlinear-programming.html" class="w3-bar-item w3-button">Nonlinear Programming</a>
+                        <a href="./notes/nonlinear-programming.html" class="w3-bar-item w3-button">Optimization</a>
                         <a href="./notes/calculus-of-variations.html" class="w3-bar-item w3-button">Calculus Of Variations</a>
                         <a href="./notes/optimal-control.html" class="w3-bar-item w3-button">Optimal Control</a>
                         <a href="./notes/estimation.html" class="w3-bar-item w3-button">Estimation</a>
