--- a/notes/smart-materials.html
+++ b/notes/smart-materials.html
@@ -58,8 +58,8 @@
             <a href="javascript:void(0)" onclick="w3_close()" class="w3-right w3-xlarge w3-padding-large w3-hover-black w3-hide-large" title="Close Menu">
                 <i class="fa fa-remove"></i>
             </a>
-            <h4 class="w3-bar-item"><b>Table of contents</b></h4>
-            <a class="w3-bar-item w3-button w3-hover-black" href="#">6 Smart materials</a>
+            <h4 class="w3-bar-item"><b><a class="chapter-link" href="#">6 Smart materials</a></b></h4>
+            <a class="w3-bar-item w3-button w3-hover-black" href="#">6.1 Smart materials</a>
         </nav>
 
         <!-- Overlay effect when opening sidebar on small screens -->
