Fixed broken link

--- a/notes/calculus-of-variations.html
+++ b/notes/calculus-of-variations.html
@@ -60,7 +60,7 @@
             </a>
             <h4 class="w3-bar-item"><b><a class="chapter-link" href="#calculus-of-variations">3 Calculus of variations</a></b></h4>
             <a class="w3-bar-item w3-button w3-hover-black" href="./calculus-of-variations/introduction.html">3.1 Introduction</a>
-            <a class="w3-bar-item w3-button w3-hover-black" href="./calculus-of-variations/optimality.criteria.html">3.2 Optimality criteria</a>
+            <a class="w3-bar-item w3-button w3-hover-black" href="./calculus-of-variations/optimality-criteria.html">3.2 Optimality criteria</a>
             <a class="w3-bar-item w3-button w3-hover-black" href="./calculus-of-variations/weak-extrema.html">3.3 Weak extrema</a>
             <a class="w3-bar-item w3-button w3-hover-black" href="./calculus-of-variations/piecewise-extremal-functions.html">3.4 Piecewise extremal functions</a>
             <a class="w3-bar-item w3-button w3-hover-black" href="./calculus-of-variations/constrained-problems.html">3.5 Constrained problems</a>
