--- a/notes/calculus-of-variations/weak-extrema.html
+++ b/notes/calculus-of-variations/weak-extrema.html
@@ -60,7 +60,7 @@
             </a>
             <h4 class="w3-bar-item"><b><a class="chapter-link" href="../calculus-of-variations.html">3 Calculus of variations</a></b></h4>
             <a class="w3-bar-item w3-button w3-hover-black" href="./introduction.html">3.1 Introduction</a>
-            <a class="w3-bar-item w3-button w3-hover-black" href="./optimality.criteria.html">3.2 Optimality criteria</a>
+            <a class="w3-bar-item w3-button w3-hover-black" href="./optimality-criteria.html">3.2 Optimality criteria</a>
             <a class="w3-bar-item w3-button w3-hover-black" href="./weak-extrema.html">3.3 Weak extrema</a>
             <a class="w3-bar-item w3-button w3-hover-black" href="./piecewise-extremal-functions.html">3.4 Piecewise extremal functions</a>
             <a class="w3-bar-item w3-button w3-hover-black" href="./constrained-problems.html">3.5 Constrained problems</a>
