--- a/notes.html
+++ b/notes.html
@@ -44,6 +44,10 @@
                     <h1 class="w3-text-teal">Notes</h1>
                     <p>We make use of <a href="https://web.hypothes.is/">hypothes.is</a> to receive feedback and comments about the notes.
                         Just highlight any portion of text in the following sections and write a comment as needed.</p>
+
+                    <p><b>Note:</b> The parts related to nonlinear programming and calculus of variations are mostly taken from
+                    <a href="https://www.semanticscholar.org/paper/Nonlinear-and-Dynamic-Optimization%3A-From-Theory-to-Chachuat/e076cde6715eb8b327433cad47b41598a250daa0">Nonlinear and Dynamic Optimization: From Theory to Practice</a>
+                by B. Chachuat (2007), and have been adapted to the scope of our course.</p>
                     <h4><a href="./notes/introduction.html">Introduction</a></h4>
                     <h4><a href="./notes/nonlinear-programming.html">Nonlinear programming</a></h4>
                     <h4><a href="./notes/calculus-of-variations.html">Calculus of variations</a></h4>
